--- a/Project1.css
+++ b/Project1.css
@@ -49,7 +49,7 @@ table {
 	height: 550px; 
 	background-size: 28% 50%;  
 	background-image: url("assets/headingPic.png"); 
-	background-position: 90% 30%;
+	background-position: center bottom;
 	background-color: powderblue; 
 	padding: 30px 30px 30px 30px;
 	font-family: proxima-nova;
