--- a/Project1.css
+++ b/Project1.css
@@ -7,15 +7,16 @@ body {
 	background-attachment: fixed;
 }
 
-a, h1 {
+div {
+	background-repeat: no-repeat;
+}
+
+h1, a {
 	color:slategray;
 	text-decoration: none;
 }
 
-div {
-	background-repeat: no-repeat;
-}
-			
+/* style h1 tags */
 h1 {
 	font-size: 56px; 
 	font-family: proxima-nova;
@@ -61,6 +62,10 @@ table {
 	font-size: 35px;
 }
 
+.contents a {
+	margin-left: 15px;
+}
+
 .education {
 	padding: 40px 180px 60px 180px; 
 	text-align:center;
@@ -100,6 +105,25 @@ table {
  	cellspacing: 0px;
 }
 
+
+#profile {
+	font-size:0; 
+	background-color: #9BA4C9;
+}
+
+#profile img {
+	border: 0px;
+	width: 90%;
+	display: block;
+}
+
+#edu-info {
+	font-size:25px;
+	line-height: 150%;
+	color:#DCDCDC"
+}
+
+
 #education {
 	color:#9BA4C9;
 }
@@ -130,13 +154,4 @@ table {
 
 #links-title {
 	font-size: 20px;
-}
-
-#profile {
-	font-size:0; 
-	background-color: #9BA4C9;
-}
-
-.contents a {
-	margin-left: 15px;
 }
