--- a/Project1.css
+++ b/Project1.css
@@ -48,7 +48,7 @@ table {
 
 .heading {
 	height: 550px; 
-	background-size: 50% 75%;
+	background-size: 50% 85%;
 	background-image: url("assets/headingPic.png"); 
 	background-position: center bottom;
 	background-color: powderblue; 
@@ -120,7 +120,7 @@ table {
 #edu-info {
 	font-size:25px;
 	line-height: 150%;
-	color:#DCDCDC";
+	color:#DCDCDC;
 }
 
 
@@ -143,7 +143,7 @@ table {
 
 #links {
 	width: 100%;
-	background-color: #79A6A4; 
+	background-color: #9aabd2; 
 	font-size: 10px;
 }
 
