--- a/Project1.css
+++ b/Project1.css
@@ -56,6 +56,14 @@ table {
 	padding: 30px 30px 30px 30px;
 	font-family: proxima-nova;
 }
+
+.heading-text {
+        position:absolute;                 
+        bottom:25%;                         
+        right:10%;     
+	text-align: center;
+	color: #49697a;
+}
 			
 .title {
 	margin: 0%;
