--- a/Project1.css
+++ b/Project1.css
@@ -118,7 +118,7 @@ table {
 .education {
 	padding: 40px 180px 60px 180px; 
 	text-align:center;
-	background-color: slategray; 
+	background-color: #a3cee3; 
 	font-family: proxima-nova;
 }
 
@@ -181,7 +181,7 @@ table {
 #edu-info {
 	font-size:25px;
 	line-height: 150%;
-	color:#DCDCDC;
+	color:#B1C1F2;
 }
 
 
