--- a/Project1.css
+++ b/Project1.css
@@ -211,6 +211,8 @@ table {
 #links img {
 	width:300px; 
 	height: 220px;
+	border: 4px solid white;
+  	box-shadow: 2px 2px 9px #6c6a6a;
 }
 
 #links-title {
