--- a/Project1.css
+++ b/Project1.css
@@ -209,6 +209,7 @@ table {
 	background-image: url('https://wallpaperaccess.com/full/1596464.jpg');
   	background-repeat: no-repeat;
   	background-size: cover;
+	padding-bottom: 50px;
 }
 
 #links img {
