--- a/Project1.css
+++ b/Project1.css
@@ -1,8 +1,6 @@
 body {
 	margin: 0px; 
 	padding: 0px; 
-	/*background photo by Max Pixel via Creative Commons - link not required */
-	background-image: url('assets/page-background.png');
 	background-color: #18273d; 
 	background-attachment: fixed;
 	background-size: cover;
@@ -202,9 +200,9 @@ table {
 
 #links {
 	width: 100%;
-	background-color: #9aabd2; 
+	background-color: white;
 	font-size: 10px;
-	background-image: url('https://wallpaperaccess.com/full/1596464.jpg');
+	/*background-image: url('https://wallpaperaccess.com/full/1596464.jpg');*/
   	background-repeat: no-repeat;
   	background-size: cover;
 	padding-bottom: 50px;
