--- a/Project1.css
+++ b/Project1.css
@@ -147,21 +147,24 @@ table {
 #contact {
 	text-align: center;
 	margin-top: 90px;
+	text-align: right;
+	
 }
 
 #contact-text img {
-	height: 50px;
-	width: 50px;
+	height: 60px;
+	width: 60px;
 }
 
 #contact-text {
-	width: 70px;
+	width: 70%;
+	
 }
 
 #number {
 	text-align: center;
 	font-weight: bold;
-	font-size: 65px; 
+	font-size: 55px; 
 	color: #B1C1F2; 
 	font-family: Georgia;
 }
