--- a/Project1.css
+++ b/Project1.css
@@ -225,23 +225,41 @@ table {
 }
 
 /* style projects and page links */
-#links {
+.projects {
 	width: 100%;
-	background-color: white;
-	font-size: 10px;
-	/*background-image: url('https://wallpaperaccess.com/full/1596464.jpg');*/
-  	background-repeat: no-repeat;
-  	background-size: cover;
-	padding-bottom: 50px;
+	text-align: center;
+	background-image: linear-gradient(to left, #18273d, #a3cee3);
 }
 
-#links img {
-	width:300px; 
+.slideshow {
+	display: flex;
+	justify-content: center;
+}
+
+.show {
+	transition: 0.5s;
 	height: 220px;
-	border: 4px solid white;
-  	box-shadow: 2px 2px 9px #6c6a6a;
+	width: 350px;
+	margin: 15px;
+	background-repeat: no-repeat;
+	background-size: cover;
+  	padding-bottom: 50px;
 }
 
-#links-title {
-	font-size: 20px;
+.show:hover {
+	box-shadow: 0 0 0 200px rgba(0,0,0,0.9) inset;
 }
+
+/* style project pictures */
+.pic1 {
+	background-image: url("assets/Java1.PNG");
+}
+
+.pic2 {
+	background-image: url("assets/Java2.PNG");
+}
+
+.pic3 {
+	background-image: url("assets/website.PNG");
+}
+
