--- a/Project1.css
+++ b/Project1.css
@@ -228,7 +228,8 @@ table {
 .projects {
 	width: 100%;
 	text-align: center;
-	background-image: linear-gradient(to left, #18273d, #a3cee3);
+	/*background-image: linear-gradient(to left, #18273d, #a3cee3);*/
+	background-color: white;
 }
 
 .slideshow {
