--- a/Project1.css
+++ b/Project1.css
@@ -159,6 +159,7 @@ table {
 	background-repeat: no-repeat;
 	background-size: cover;
   	padding-bottom: 50px;
+	border: 1px solid white;
 }
 
 .show:hover {
