--- a/Project1.css
+++ b/Project1.css
@@ -197,6 +197,13 @@ table {
 	padding-left: 30px;
 }
 
+.accounts p {
+	margin-top: 0px;
+	margin-bottom: 0px;
+	padding: 10px;
+	background-color: #18273d;
+}
+
 #contact {
 	text-align: center;
 	margin-top: 90px;
