--- a/Project1.css
+++ b/Project1.css
@@ -142,7 +142,7 @@ table {
 .projects {
 	width: 100%;
 	text-align: center;
-	background-image: linear-gradient(to left, #18273d, #a3cee3);
+	background-image: linear-gradient(to left, #fbf0e1, #a3cee3);
 	background-color: black;
 }
 
