--- a/Project1.css
+++ b/Project1.css
@@ -201,7 +201,7 @@ table {
 	margin-top: 0px;
 	margin-bottom: 0px;
 	padding: 10px;
-	background-color: #18273d;
+	/*background-color: #18273d;*/
 }
 
 #contact {
