--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2978,3 +2978,29 @@ input, select, textarea {
 			}
 
 	}
+
+
+	  .topnav {
+		overflow: hidden;
+		border-bottom: 1px solid #f2f2f2;
+	  }
+	  
+	  .topnav a {
+		float: right;
+		color: rgb(193, 188, 188);
+		text-align: center;
+		padding: 14px 16px;
+		text-decoration: none;
+		font-size: 17px;
+		outline: none;
+	  }
+
+	  .topnav a:hover {
+		background-color: #ddd;
+		color: black;
+	  }
+	  
+	  .topnav a.active {
+		background-color: rgb(202, 199, 199);
+		color: rgb(255, 255, 255);
+    }
